[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/shared/projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/shared/projectile_straight_area.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.25

[node name="projectile" instance=ExtResource( 1 )]
script = ExtResource( 2 )
cut_grapple = false

[node name="Area" type="Area" parent="." index="1"]
collision_layer = 0
collision_mask = 0
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]
shape = SubResource( 1 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
